add allure step